@@ -1,4 +1,5 @@
 .DS_Store
+package-lock.json
 
 ## Ignore Visual Studio temporary files, build results, and
 ## files generated by popular Visual Studio add-ons.
